--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>水保冒險島-操作指南</title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NRQJR0RYC9"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-NRQJR0RYC9');
+	</script>
   </head>
   <body style="padding: 0;margin: 0">
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSiY9CLrSELM3lUABnO29n4dZCX0U1JP9gId1LRsZehN2eCk_Ntmn1tzm32Hop3dM4KyByUoJZcZcza/embed?slide=id.ge553d68960_0_0" style="width:100%; height: 100%; position: absolute; border-width: 0px"/>
