--- a/hakka-vr.html
+++ b/hakka-vr.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>水保冒險島-操作指南</title>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NRQJR0RYC9"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-1RR1EF8XS2"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-NRQJR0RYC9');
+	  gtag('config', 'G-1RR1EF8XS2');
 	</script>
   </head>
   <body style="padding: 0;margin: 0">
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSiY9CLrSELM3lUABnO29n4dZCX0U1JP9gId1LRsZehN2eCk_Ntmn1tzm32Hop3dM4KyByUoJZcZcza/embed" style="width:100%; height: 100%; position: absolute; border-width: 0px"/>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQF0s8KFOXnjs90Eq6CRPsNN6KJ0G5ocmZtc2W6ijlhywBcW61q305sMzwkB1xWVMjbtHP-gWN-PJq1/embed" style="width:100%; height: 100%; position: absolute; border-width: 0px"/>
   </body>
 </html>
