更新GA識別碼

--- a/hakka-vr.html
+++ b/hakka-vr.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>水保冒險島-操作指南</title>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-1RR1EF8XS2"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-6YWYR63SHH"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-1RR1EF8XS2');
+	  gtag('config', 'G-6YWYR63SHH');
 	</script>
   </head>
   <body style="padding: 0;margin: 0">
